# spacy-grpc-text-to-vector

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.base  LICENSE  README.md  build-docker-base.sh  build-docker-en.sh  dev-install-spacy-model-en.sh  docker-compose.yml  gen-proto.sh  pyproject.toml  service.py  start.sh  test_client.py  test_client.sh  tester-client.py  text_to_vector_pb2.py  text_to_vector_pb2.pyi  text_to_vector_pb2_grpc.py
lab/: spacy.ipynb
protos/: text_to_vector.proto
